<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shakit!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="nowPlaying_label">Now Playing: </string>
	<string name="previous_label">Previous:</string>
	<string name="next_label">Next:</string>
	<string name="currentPlaying_label">Current Label</string>
	<string name="nextPlaying_label">Next Label</string>
	<string name="previousPlaying_label">Previous Label</string>
	<string name="playPause_btn_desc">Play/Pause Button</string>
	<string name="next_btn_desc">Next Button</string>
	<string name="previous_btn_desc">Previous Button</string>
	<string name="pause_hint">Cover the phone to pause music!</string>
	<string name="songCounter_label">Song counter</string>
	<string name="widget_songLabel">Tap to start Shakit!</string>
	<string name="widget_speaker_desc">Speaker Background</string>
	<string name="widget_play_desc">Play Button</string>
	<string name="widget_back_desc">Previous Button</string>
	<string name="widget_next_desc">Next Button</string>
	<string name="widget_dropDown_desc">Dropdown Button</string>
	<string name="widgetConfig_speakerTitle">Choose a Speaker color</string>
	<string name="widgetConfig_buttonTitle">Choose a Button color</string>
	<string name="widgetConfig_tintTitle">Choose a Tint color</string>
	<string name="widgetConfig_redColor">Red</string>
	<string name="widgetConfig_yellowColor">Yellow</string>
	<string name="widgetConfig_blueColor">Blue</string>
	<string name="widgetConfig_darkColor">Dark</string>
	<string name="widgetConfig_lightColor">Light</string>
	<string name="widgetConfig_blackColor">Black</string>
	<string name="widgetConfig_whiteColor">White</string>
	<string name="widgetConfig_pageIndicatorDesc">Page Indicator</string>
	<string name="widgetConfig_buttonLabel">Create!</string>
	<string name="widget_songCountLabel">0/0</string>
</resources>
