<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@id/widget_tintedBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="22dp"
        android:background="#50000000"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="13dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/widget_songLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:duplicateParentState="true"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingTop="10dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/widget_songLabel"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFF" >
                    
                    <requestFocus android:focusable="true" android:focusableInTouchMode="true"
        				android:duplicateParentState="true" />
                    
				</TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <ImageView
                    android:id="@id/widget_previous"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/widget_back_desc"
                    android:maxHeight="25dp"
                    android:maxWidth="25dp"
                    android:paddingLeft="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/back_small" />

                <TextView
                    android:id="@id/widget_songCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.99"
                    android:gravity="center"
                    android:text="@string/widget_songCountLabel"
                    android:textColor="#FFFFFF" />
                
                <ImageView
                    android:id="@id/widget_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/widget_next_desc"
                    android:maxHeight="25dp"
                    android:maxWidth="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next_small" />
                
            </LinearLayout>
        
    </LinearLayout>

    <ImageView
        android:id="@id/widget_playPauseBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/widget_speaker_desc"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/speaker_yellow" />

    <ImageView
        android:id="@id/widget_playPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/widget_play_desc"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/play_small" />
    
</RelativeLayout>